--- a/proyecto/src/style/fechaIncorrecta.css
+++ b/proyecto/src/style/fechaIncorrecta.css
@@ -34,7 +34,7 @@ select:hover {
 
 select:focus {
   outline: none;
-  border-color: #3b82f6;
+  border: 2px solid #124596;
   background-color: #ffffff;
   box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
 }
