--- a/proyecto/src/style/app.css
+++ b/proyecto/src/style/app.css
@@ -2,19 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  min-height: 100vh;
-  width: 100%;
-  background-color: #020617;
-  background-image: radial-gradient(
-    circle 500px at 50% 300px,
-    rgba(16, 185, 129, 0.35),
-    transparent
-  );
-  position: relative;
-}
-
-.contenedor-principal {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
+  height: 100%;
+  width: 90dvw;
+  background: radial-gradient(125% 125% at 50% 10%, #000000 40%, #072607 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
