--- a/proyecto/src/style/app.css
+++ b/proyecto/src/style/app.css
@@ -4,7 +4,28 @@ body {
   font-family: Arial, sans-serif;
   height: 100%;
   width: 90dvw;
-  background: radial-gradient(125% 125% at 50% 10%, #000000 40%, #072607 100%);
+  background-color: #000000;
+  background-image: radial-gradient(
+      ellipse 70% 55% at 50% 50%,
+      rgba(255, 20, 147, 0.15),
+      transparent 50%
+    ),
+    radial-gradient(
+      ellipse 160% 130% at 10% 10%,
+      rgba(0, 255, 255, 0.12),
+      transparent 60%
+    ),
+    radial-gradient(
+      ellipse 160% 130% at 90% 90%,
+      #8a2be22e,
+      transparent 65%
+    ),
+    radial-gradient(
+      ellipse 110% 50% at 80% 30%,
+      rgba(255, 215, 0, 0.08),
+      transparent 40%
+    );
   background-repeat: no-repeat;
+  background-position: center;
   background-attachment: fixed;
 }
