--- a/proyecto/src/style/sidenav.css
+++ b/proyecto/src/style/sidenav.css
@@ -8,13 +8,16 @@
 }
 
 .contenedor-lista-elementos {
-  background-color: rgba(7 38 7 / 20%);
+  background-color: rgba(7 38 50 / 30%);
   backdrop-filter: blur(10px);
   color: white;
   height: 80%;
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.18);
-  padding: 40% 0px;
+  margin: 25% 2%;
+  padding: 50% 7%;
+  display: flex;
+  flex-direction: column;
 }
 
 .contenedor-lista-elementos li {
@@ -22,18 +25,27 @@
   list-style: none;
   border-bottom: 2px solid rgba(255, 255, 255, 0.18);
   margin: 0px;
-  padding: 0.5rem 0px;
+  padding: 1rem 0px;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .contenedor-lista-elementos li a {
   text-decoration: none;
   color: white;
+   display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px; 
+  height: 48px;
+  border-radius: 50%;
 }
 
-.menuItem-icono {
-  height: auto;
-  width: 50%;
+li .nav-link.active {
+  border-radius: 50%;
+  padding: 0%;
+  background-color: rgba(197, 94, 175, 0.18);
 }
 
 .contenedor-contenido {
