--- a/proyecto/src/style/sidenav.css
+++ b/proyecto/src/style/sidenav.css
@@ -1,3 +1,35 @@
+.contenedor-contenido {
+  width: 100%;
+  height: 100dvh;
+  display: grid;
+  grid-template-rows: auto 8fr;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  align-content: start;
+}
+
+.header-side {
+  background: none;
+  width: 95%;
+  color: white;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 15fr 1fr;
+  align-items: center;
+}
+
+.titulo-contenido {
+  width: fit-content;
+  padding: 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  border-radius: 16px;
+  box-shadow: 0 0 20px 5px rgba(155, 85, 247, 0.5);
+}
+
+.btn-consigna {
+  width: max-content;
+}
+
 .contenedor-principal {
   width: 100dvw;
   height: 100dvh;
@@ -60,4 +92,6 @@ li .nav-link.active {
   width: 100%;
   justify-items: center;
   align-content: center;
+  margin-bottom: 5%;
+  
 }
