--- a/proyecto/src/style/recuperarContrasenia.css
+++ b/proyecto/src/style/recuperarContrasenia.css
@@ -18,12 +18,12 @@
 .css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root.Mui-completed {
   color: #500e8f !important;
 }
- 
-.css-14ncu80-MuiStepConnector-line{
+
+.css-14ncu80-MuiStepConnector-line {
   border-color: #500e8f !important;
 }
 
-.css-12eb3rq-MuiStepLabel-label{
+.css-12eb3rq-MuiStepLabel-label {
   color: black !important;
   font-weight: 500 !important;
   font-size: larger !important;
@@ -47,20 +47,27 @@
   gap: 1rem;
 }
 
-.texto-pasos{
+.vernover {
+  position: relative;
+  display: flex;
+  width: 80%;
+  justify-content: center;
+}
+
+.texto-pasos {
   font-size: 1.4rem;
   font-weight: 500;
   color: #000000;
   margin-bottom: 2%;
 }
 
-.texto-pasos.final{
+.texto-pasos.final {
   font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 2%;
 }
 
-.input-step{
+.input-step {
   padding: 0.5rem;
   font-size: 1.1rem;
   border: 1px solid #ccc;
@@ -69,25 +76,38 @@
   box-sizing: border-box;
 }
 
-.boton-siguiente{
+.vernover .input-step {
+  width: 50%;
+  position: relative;
+}
+
+.boton-ojo {
+  position: absolute;
+  top: 50%;
+  background: none;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.boton-siguiente {
   color: #500e8f !important;
   border-color: #500e8f !important;
   font-weight: 600 !important;
 }
 
-.boton-siguiente:hover{
+.boton-siguiente:hover {
   background-color: rgb(80, 14, 143, 40%) !important;
   color: white !important;
   border-color: #500e8f !important;
 }
 
-.boton-atras{
+.boton-atras {
   color: #500e8f !important;
   border-color: #500e8f !important;
   font-weight: 600 !important;
 }
 
-.boton-atras:hover{
+.boton-atras:hover {
   background-color: rgb(80, 14, 143, 40%) !important;
   color: white !important;
   border-color: #500e8f !important;
