--- a/proyecto/src/style/recuperarContrasenia.css
+++ b/proyecto/src/style/recuperarContrasenia.css
@@ -15,6 +15,10 @@
   color: #902ef5 !important;
 }
 
+.css-124afma.Mui-active {
+  color: #902ef5 !important;
+}
+
 .css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root.Mui-completed {
   color: #500e8f !important;
 }
