--- a/proyecto/src/style/sidenav.css
+++ b/proyecto/src/style/sidenav.css
@@ -115,7 +115,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 20%;
+    height: 10dvh;
     margin: 0;
     padding: 0.5rem 0.75rem;
     border-radius: 0;
