--- a/proyecto/src/style/sidenav.css
+++ b/proyecto/src/style/sidenav.css
@@ -115,13 +115,13 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 10dvh;
+    height: 20dvh;
     margin: 0;
     padding: 0.5rem 0.75rem;
     border-radius: 0;
     backdrop-filter: blur(10px);
     overflow-x: auto;
-    scrollbar-width: none; /* Firefox */
+    scrollbar-width: none;
   }
 
   .contenedor-lista-elementos::-webkit-scrollbar {
