--- a/proyecto/src/style/contraseniaIncorrecta.css
+++ b/proyecto/src/style/contraseniaIncorrecta.css
@@ -29,6 +29,7 @@
   width: 60%;
   position: relative;
   display: flex;
+  align-items: center; /* Centra verticalmente el contenido (input + icono) */
 }
 
 .cont-vernover .input-contra {
@@ -38,12 +39,13 @@
 
 .boton-ojo {
   position: absolute;
-  top: 50%;
+  top: 0;
+  bottom: 0; 
+  margin: auto 0; 
   background: none;
   border-radius: 50%;
   cursor: pointer;
-  right: 0.75rem;
-  transform: translateY(-50%);
+  right: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -91,8 +93,12 @@
   .boton-ojo {
     right: 1rem; 
     width: 50px; 
-    height: 50px;
+    height: 100%; /* Mantiene el centrado vertical en pantallas pequeñas */
     padding: 0.25rem;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+    transform: none; /* Asegura que no se aplique el translate anterior */
   }
 
   .boton-ojo svg, .boton-ojo img, .boton-ojo span {
