--- a/proyecto/src/style/sidenav.css
+++ b/proyecto/src/style/sidenav.css
@@ -43,7 +43,7 @@
   background-color: rgba(7 38 50 / 30%);
   backdrop-filter: blur(10px);
   color: white;
-  height: 80%;
+  height: 85%;
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   margin: 25% 5%;
@@ -51,6 +51,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-self: center;
+  align-self: center;
 }
 
 .contenedor-lista-elementos li {
